--- a/project/index.html
+++ b/project/index.html
@@ -14,6 +14,6 @@
     <p id="error"></p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="./login/script.js"></script>
 </body>
 </html>
