Переместил index.html в корень для GitHub Pages

--- a/history.html
+++ b/history.html
@@ -2,8 +2,9 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>История ДЗ</title>
-<link rel="stylesheet" href="../menu/style.css">
+<link rel="stylesheet" href="./styley.css">
 </head>
 <body>
 <header>
@@ -13,6 +14,6 @@
 <main>
   <ul id="historyList"></ul>
 </main>
-<script src="script.js"></script>
+<script src="./scripte.js"></script>
 </body>
 </html>
