--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Меню</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./stylee.css">
 </head>
 <body>
 <header>
@@ -36,6 +37,6 @@
   </div>
 </div>
 
-<script src="script.js"></script>
+<script src="./scripta.js"></script>
 </body>
 </html>
